refactor: ajustes de pastas em models e adição de arquivo de rota para bancos
