# testeSwagger.json
@@ -540,6 +540,9 @@
             "type": "string",
             "format": "date-time"
           },
+          "codigoBanco": {
+            "type": "number"
+          },
           "nome": {
             "type": "string",
             "minLength": 2,
@@ -555,6 +558,7 @@
           }
         },
         "required": [
+          "codigoBanco",
           "nome"
         ]
       },
